Fix horizontal scroll animation causing overflow bug and style scrollbar

--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@
 }
 
 html {
-    max-width: 100vw;
     font-size: 10px;
     font-family: "Libre Franklin", sans-serif;
     --text-color: black;
@@ -42,6 +41,8 @@ html {
     overflow-x: hidden;
     line-height: 1.5;
     scroll-behavior: smooth;
+    padding: 0;
+    margin: 0;
 }
 
 body {
@@ -281,14 +282,14 @@ a.underline-hover-effect {
 
 .left {
     opacity: 0;
-    transform: translateX(-50%);
+    transform: translateX(-45%);
     transition: all 1.25s ease-in-out;
     transition-delay: 0.25s;
 }
 
 .right {
     opacity: 0;
-    transform: translateX(50%);
+    transform: translateX(45%);
     transition: all 1.25s ease-in-out;
     transition-delay: 0.25s;
 }
@@ -518,3 +519,22 @@ textarea {
     min-height: 10rem;
 }
 
+/* Scrollbar styling */
+::-webkit-scrollbar {
+    width: 1.5rem; /* Make scrollbar 1rem wide */
+}
+  
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+  
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+  
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
